Project/Observabality_Project/cloud-observability-app/kubertenes_config/tracing_config/otel-collector-service.yaml
# otel-collector-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otel-collector-opentelemetry-collector
  namespace: traces
spec:
  selector:
    app.kubernetes.io/name: opentelemetry-collector
  ports:
    - name: otlp-grpc
      port: 4317
      targetPort: 4317
      protocol: TCP
    - name: otlp-http
      port: 4318
      targetPort: 4318
      protocol: TCP
  type: ClusterIP
